--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ build/gyp
 build/all.Makefile
 build/all.xcodeproj/
 build/run-tests.target.mk
+build/run-benchmarks.target.mk
 build/uv.target.mk
 gyp-mac-tool
